--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<div id="root">
-		<router-view></router-view>
+		<div id="swiper">
+			<router-view></router-view>
+		</div>
 	</div>
 </body>
 </html>
