--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>网利社区</title>
 	<meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
-	<meta content="telephone=no,email=no" name="format-detecition">
+	<meta name="format-detection" content="telephone=no" />
 </head>
 <body>
 	<div id="root">
-		<div id="swiper">
 			<router-view></router-view>
-		</div>
 	</div>
 </body>
 </html>
